@@ -3,7 +3,6 @@ from django.views.generic.base import TemplateView
 from dsmr_consumption.models.settings import ConsumptionSettings
 from dsmr_datalogger.models.settings import DataloggerSettings
 from dsmr_frontend.models.settings import FrontendSettings
-from dsmr_stats.models.settings import StatsSettings
 from dsmr_weather.models.settings import WeatherSettings
 from dsmr_backup.models.settings import BackupSettings, DropboxSettings
 
@@ -16,7 +15,6 @@ class Status(TemplateView):
         context_data['consumption_settings'] = ConsumptionSettings.get_solo()
         context_data['datalogger_settings'] = DataloggerSettings.get_solo()
         context_data['frontend_settings'] = FrontendSettings.get_solo()
-        context_data['stats_settings'] = StatsSettings.get_solo()
         context_data['weather_settings'] = WeatherSettings.get_solo()
         context_data['backup_settings'] = BackupSettings.get_solo()
         context_data['dropbox_settings'] = DropboxSettings.get_solo()
