@@ -1,3 +1,2 @@
 from .note import *
 from .statistics import *
-from .settings import *
