@@ -3,7 +3,8 @@
 
 v0.13 (β) - 2016-xx-xx
 ======================
--
+- Delete StatsSettings(.track) settings model (#71).
+- 
 
 
 
